--- a/users/koralle/.config/mise/config.toml
+++ b/users/koralle/.config/mise/config.toml
@@ -14,6 +14,9 @@ rust = 'nightly'
 # Python
 python = 'latest'
 
+# Node.js
+node = ['lts', '23', '24']
+
 [settings]
-python.compile = false
+all_compile = false
 
